fix broken layout from trash icon

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	list-style: none;
+	position: relative;
 }
 
 .card__image {
@@ -58,9 +59,9 @@
 	height: 20px;
 	cursor: pointer;
 	border: none;
-	position: relative;
-	top: 36px;
-	left: calc(100% - 33px);
+	position: absolute;
+	top: 18px;
+	right: 15px;
 }
 
 .card__delete-button:hover {
